# django-newauth

./: .gitignore  .readthedocs.yml  .travis.yml  ChangeLog.rst  MANIFEST.in  README.rst  checklist.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  lint.yml
docs/en/: Makefile  make.bat
docs/en/source/: conf.py  forms.rst  index.rst
docs/en/source/reference/: index.rst  newauth.signals.rst
docs/en/source/tutorial/: basic.rst  urls.rst
newauth/: __init__.py  admin.py  api.py  compat.py  decorators.py  forms.py  middleware.py  models.py  signals.py  test.py  urls.py  views.py
tests/: base.py  conftest.py  settings.py  test_api.py  test_backend.py  test_decorator.py  test_middleware.py  test_testcase.py  test_views.py
tests/templates/registration/: logged_out.html  login.html
tests/testapp/: apps.py  urls.py
